--- a/arquivos/css/style3.css
+++ b/arquivos/css/style3.css
@@ -7,7 +7,7 @@ body{
 }
 .conteiner{
 	height:35px;
-	background-color:#2b2b2b;
+	Background:linear-gradient(180deg, #2b2b2b, #2b2b2b, black);
 }
 .topo_int{
 	width:100%;
@@ -36,13 +36,12 @@ body{
 	float:left;
 	height:35px;
 	line-height: 35px;
-	padding-left:20px;
-	padding-right:20px;
+	padding-left:10px;
 }
 .submenu{
 	width:150px;
-	background-color:#2b2b2b;
 	position:absolute;
+	margin-top:-10;
 	display:none;
 }
 .menu li:hover .submenu {
@@ -55,7 +54,31 @@ body{
 	padding-right:10px;
 }
 .submenuitem:hover{
-	background-color:#444;
-	
+	background-color:red;
 }
+
+.home,
+.cadastro,
+.ficha,
+.Treino,
+.medidas,
+.avaliacao{
+	padding-left:10px;
+	padding-right:10px;
+} 
+
+
+.home:hover,
+.cadastro:hover,
+.ficha:hover,
+.Treino:hover,
+.medidas:hover,
+.avaliacao:hover
+{
+	background-color:red;
+} 
+
+
+
+
 
