--- a/arquivos/css/style3.css
+++ b/arquivos/css/style3.css
@@ -22,6 +22,7 @@ body{
 .menu a{
 	text-decoration:none;
 	color:#fff;
+	font-size:13px;
 }
 .submenu a{
 	color:#000;
@@ -77,7 +78,59 @@ body{
 {
 	background-color:red;
 } 
+.conteiner_corpo{
+	background-color:#afafaf;
+	height:94%;
+}
+.corpo{
+	width:100%;
+	max-width:1100px;
+	margin:auto;
+	color:#fff;
+	line-height: 35px;
+	padding-left:8px;
+	padding-right:8px;
+	
+}
 
+
+
+
+@media (min-width:200px) and (max-width:500px){
+	body{
+	margin-left:-10px;
+	
+}
+.conteiner{
+	width:25%;
+	height:100%;
+	Background:linear-gradient(90deg, #2b2b2b, #2b2b2b, black);
+	
+}
+	.topo_int{
+	
+	color:#fff;
+	padding: 0;
+	margin: 0;
+}
+.submenu{
+	width:150px;
+	position:absolute;
+	margin-left:23%;
+	margin-top:-45px;
+
+}
+.home,
+.cadastro,
+.ficha,
+.Treino,
+.medidas,
+.avaliacao{
+	
+	padding-right:73px;
+} 
+
+}
 
 
 
