--- a/arquivos/css/style3.css
+++ b/arquivos/css/style3.css
@@ -92,46 +92,8 @@ body{
 	padding-right:8px;
 	
 }
-
-
-
-
-@media (min-width:200px) and (max-width:500px){
-	body{
-	margin-left:-10px;
-	
-}
-.conteiner{
-	width:25%;
-	height:100%;
-	Background:linear-gradient(90deg, #2b2b2b, #2b2b2b, black);
-	
-}
-	.topo_int{
-	
-	color:#fff;
-	padding: 0;
-	margin: 0;
-}
-.submenu{
-	width:150px;
-	position:absolute;
-	margin-left:23%;
-	margin-top:-45px;
+.corpo_pesquisa_lista_conteudo ul li{
+	display: inline;
+	float:left;
 
 }
-.home,
-.cadastro,
-.ficha,
-.Treino,
-.medidas,
-.avaliacao{
-	
-	padding-right:73px;
-} 
-
-}
-
-
-
-
